# GeometrySandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: ActionMode.uasset  M_BasicMaterial.uasset  PointBP.uasset  kbm.uasset
Content/StarterContent/Architecture/: Floor_400x400.uasset
Content/StarterContent/Maps/: Minimal_Default.umap
Content/player/: kbmCamera.uasset  kbmDrone.uasset
Source/GeometrySandbox/: BaseObject.cpp  BaseObject.h  Line.cpp  Line.h  Point.cpp  Point.h
imgui/: imgui_single_file.cpp
saves/: testsavepoints.json
shader/: standard.frag  standard.vert  test.frag  test.vert
src/: cameraScene.cpp  cameraScene.h  circleAxisRadius.cpp  circleAxisRadius.h  collisions.cpp  collisions.h  genShapeModels.cpp  genShapeModels.h  genericCircle.cpp  genericCircle.h  genericLine.cpp  genericLine.h  genericPoint.cpp  genericPoint.h  genericShape.cpp  genericShape.h  line.cpp  line.h  main.cpp  midpoint.cpp  midpoint.h  pfd.cpp  point.cpp  point.h  portable-file-dialogs.h  ray.cpp  ray.h  scene.cpp  scene.h  segment.cpp  segment.h  shader.cpp  shader.h  shapeManager.cpp  shapeManager.h  shapeSerialization.cpp  testScene.cpp  testScene.h
